fix: adjustment in overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@ html {
 
 body {
   @apply text-white bg-neutral-900;
+  overflow-y: hidden;
+  overflow: auto;
 }
 
 :root {
